fix: change body's gap in css file

--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -10,7 +10,6 @@ body {
     max-width: 1440px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .wrapper {
